# llm_inf_optimization

./: .gitignore  pyproject.toml  test.py
runs/: 12e45410-223b-4eac-9943-1caa6dd85695.jsonl  174e8331-bbdf-4a51-8150-16f867a52901.jsonl  37968a9e-02be-4046-bfbb-ea2ffe805d2f.jsonl  58e3b492-8abe-497e-bfb9-128e5e1f5b9c.jsonl  85093fa7-2658-4ad1-a8b6-bd0eb0b0a259.jsonl  9fac8b66-4e8b-40a8-832f-c81f0f133f95.jsonl  a4e39b1f-9daf-4aa6-a178-8c5d04337c23.jsonl  b1f66bfe-3e33-43d5-94c7-660ed7cde0d6.jsonl  cbabc377-a5c5-4cbf-874b-d8811bdeb9c0.jsonl  e7b48c4c-300b-4f1b-aeff-62707eecfb0a.jsonl
src/: schemas.py  ui.py
src/agents/: crew_team.py  langgraph_app.py
src/api/: chat.py  main.py
src/spark/: jobs.py
src/spark_rag/: __init__.py
src/tools/: spark_api_tools.py
