[project]
name = "spark-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.14.3",
    "crewai-tools>=1.14.3",
    "fastapi>=0.136.1",
    "ipython>=9.13.0",
    "langgraph>=1.1.9",
    "pyspark>=4.1.1",
    "streamlit>=1.56.0",
    "uvicorn>=0.46.0",
]

[project.scripts]
spark-rag = "spark_rag:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
